[gd_scene load_steps=16 format=3 uid="uid://bsxgp5g0jmyke"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_0eyvo"]
[ext_resource type="Texture2D" uid="uid://bbennjke0ioen" path="res://assets/icons/Add.svg" id="2_20jl7"]
[ext_resource type="Script" path="res://panels/Desk/Desk.gd" id="2_jux45"]
[ext_resource type="Texture2D" uid="uid://dfrrs2dnvlvsu" path="res://assets/icons/Delete.svg" id="3_8jyrh"]
[ext_resource type="StyleBox" uid="uid://csle20exwqtti" path="res://assets/PanelMenuBar.tres" id="3_eidul"]
[ext_resource type="Texture2D" uid="uid://cbevvqqcn6jof" path="res://assets/icons/Dashboard.svg" id="4_mrmr6"]
[ext_resource type="Texture2D" uid="uid://dee78hal6ympb" path="res://assets/icons/Grid_On.svg" id="4_nh5c7"]
[ext_resource type="Texture2D" uid="uid://rqf8w11gk6ud" path="res://assets/icons/Edit.svg" id="5_mhd6h"]
[ext_resource type="Texture2D" uid="uid://cawxywwrt8wr5" path="res://assets/icons/Arrow_upward.svg" id="6_0ouy4"]
[ext_resource type="Texture2D" uid="uid://1ha66l33ttxn" path="res://assets/icons/Copy.svg" id="6_kyuoi"]
[ext_resource type="Texture2D" uid="uid://cv0titm4w4jp6" path="res://assets/icons/Arrow_downward.svg" id="7_3vntk"]
[ext_resource type="Script" path="res://panels/Desk/DrawGrid.gd" id="8_lbx4f"]
[ext_resource type="PackedScene" uid="uid://dfu5s8fjy0ex4" path="res://components/UIPanel/EditControls.tscn" id="11_wp0lx"]

[sub_resource type="InputEventKey" id="InputEventKey_trkq2"]
device = -1
shift_pressed = true
keycode = 4194312

[sub_resource type="Shortcut" id="Shortcut_5ty2n"]
events = [SubResource("InputEventKey_trkq2")]

[node name="Desk" type="PanelContainer" node_paths=PackedStringArray("edit_controls", "edit_mode_nodes")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0eyvo")
script = ExtResource("2_jux45")
edit_controls = NodePath("VBoxContainer/PanelContainer/HBoxContainer/EditControls")
edit_mode_nodes = [NodePath("VBoxContainer/PanelContainer/HBoxContainer/MainControls"), NodePath("VBoxContainer/PanelContainer/HBoxContainer/LayerControls"), NodePath("VBoxContainer/PanelContainer/HBoxContainer/SnapControls")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_eidul")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Desk"
icon = ExtResource("4_mrmr6")
flat = true

[node name="MainControls" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/MainControls"]
layout_mode = 2

[node name="Add" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/MainControls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_20jl7")

[node name="Delete" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/MainControls/HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_5ty2n")
icon = ExtResource("3_8jyrh")

[node name="Edit" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/MainControls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("5_mhd6h")

[node name="Copy" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/MainControls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_kyuoi")

[node name="LayerControls" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/LayerControls"]
layout_mode = 2

[node name="MoveUp" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/LayerControls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_0ouy4")

[node name="MoveDown" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/LayerControls/HBoxContainer"]
layout_mode = 2
icon = ExtResource("7_3vntk")

[node name="SnapControls" type="PanelContainer" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/HBoxContainer/SnapControls"]
layout_mode = 2

[node name="ToggleGrid" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer/SnapControls/HBoxContainer"]
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = ExtResource("4_nh5c7")

[node name="SnappingDistance" type="SpinBox" parent="VBoxContainer/PanelContainer/HBoxContainer/SnapControls/HBoxContainer"]
custom_minimum_size = Vector2(133.875, 0)
layout_mode = 2
min_value = 5.0
value = 20.0
prefix = "Snap:"
suffix = "px"

[node name="EditControls" parent="VBoxContainer/PanelContainer/HBoxContainer" instance=ExtResource("11_wp0lx")]
layout_mode = 2
size_flags_horizontal = 10
show_settings = false

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container" type="Control" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("8_lbx4f")
color = Color(0, 0, 0, 0.231373)
grid_size = Vector2(40, 40)
line_width = 2.28
grid_mode = 1

[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MainControls/HBoxContainer/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MainControls/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MainControls/HBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/MainControls/HBoxContainer/Copy" to="." method="_on_copy_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/LayerControls/HBoxContainer/MoveUp" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/HBoxContainer/LayerControls/HBoxContainer/MoveDown" to="." method="_on_move_down_pressed"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/SnapControls/HBoxContainer/ToggleGrid" to="." method="set_snapping_enabled"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/HBoxContainer/SnapControls/HBoxContainer/SnappingDistance" to="." method="_on_snapping_distance_value_changed"]
[connection signal="gui_input" from="VBoxContainer/PanelContainer2/Container" to="." method="_on_container_gui_input"]
